--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: rgb(160, 160, 175);
+    background-color: rgb(233, 233, 233);
 }
 
 img{
@@ -11,6 +11,7 @@ img{
 
 logo{
     display: flex;
+    padding-top: 40px;
     background-color: #2782ee;
     height: 100px;
     max-width: 100%;
@@ -22,21 +23,33 @@ logo{
 }
 
 .logo_1{
-    padding-top: 80px;
+    padding-top: 20px;
 }
+
+
 
 homo{
     display: flex;
     background-color:#2782ee;
     height: 100px;
     max-width: 100%;
-    color: darkgray;
+    color: rgb(233, 233, 233);
     padding: 10px;
-    justify-content: flex-start;
+    
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 60px;
     padding: 20px;
+}
+
+.homo_0{
+    padding-left: 195px;
+    padding-bottom: 1px;
+}
+
+.homo_1{
+    padding-left: 40px;
+    justify-content: space-around;
 }
 
 .th_mov{
@@ -45,9 +58,6 @@ homo{
     font-size: 30px;
 }
 
-.homo_1{
-    padding-left: 40px;
-}
 
 quadro{
     display: flex;
@@ -56,8 +66,8 @@ quadro{
     margin: auto;
     width: 800px;
     height: 800px;
-    border-radius: 25px;
-    box-shadow:2px 10px 5px 0 rgb(12, 12, 12);
+    border-radius: 30px;
+    box-shadow:0 0 30px rgb(12, 12, 12);
     margin-top: -140px;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif
@@ -103,6 +113,7 @@ h6{
 .enter{
     color: rgb(3, 3, 66);
     font-size: 45px;
+    margin-top: 40px;
 }
 
 .place{
@@ -121,7 +132,7 @@ h6{
 }
 
 h3{
-    background-color: rgb(160, 160, 175);
+    background-color: rgb(233, 233, 233);
 }
 
 .text_color{
@@ -129,9 +140,16 @@ h3{
     font-size: 40px;
 }
 
+.text_time{
+    font-family:Arial, Helvetica, sans-serif;
+}
+
 .text_color_again{
+    display: flex;
     color: red;
     font-size: 40px;
+    font-family:Arial, Helvetica, sans-serif;
+    margin: auto;
 }
 
 wrapper{
