--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ button{
     background-color: blue;
     height: 200px;
     width: 780px;
-    border-radius: 10px;
+    border-radius: 30px;
     border-style: none;
     margin: auto;
     font-size: 50px;
@@ -152,10 +152,10 @@ h3{
     margin: auto;
 }
 
-wrapper{
+footer{
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin: 60px;
     justify-content: center;
 }
 
