--- a/style.css
+++ b/style.css
@@ -89,13 +89,14 @@ quadro{
     border-radius: 30px;
     justify-content:flex-end;
     margin-right: 15px;
-    margin-top: 15px;
+    margin-top: 10px;
     font-weight: bold;
 }
 
 .blue_2{
     display: flex;
     margin: 0;
+    margin-top: -5;
     background-color: blue;
     justify-content: center;
 }
@@ -157,7 +158,7 @@ h3{
     color: grey;
     font-size: 40px;
     margin-top: 40px;
-    
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .text_time{
