--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ quadro{
 .blue_2{
     display: flex;
     margin: 0;
-    margin-top: -5;
+    margin-top: -5px;
     background-color: blue;
     justify-content: center;
 }
