--- a/style.css
+++ b/style.css
@@ -2,18 +2,12 @@
     background-color: rgb(233, 233, 233);
 }
 
-/*img{
-    width: 100px;
-    height: 75px;
-    margin-right: 20px;
-}*/
-
 .icon {
-	background-image: url("1.svg");
+	background-image: url("3.svg");
     background-repeat: no-repeat;
     background-color: inherit;
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
 }
 
 .svg1{
@@ -29,8 +23,6 @@
     margin-top: 30px;
 }
 
-
-
 .wrapp{
     display: flex;
     flex-direction: column;
@@ -41,7 +33,7 @@
 
 logo{
     display: flex;
-    padding-top: 40px;
+    padding-bottom: 60px;
     background-color:inherit;
     height: 100px;
     max-width: 100%;
@@ -53,7 +45,13 @@ logo{
 }
 
 .logo_1{
-    padding-top: 40px;
+    padding-top: 75px;
+    margin-left: -30px;
+}
+
+.bold_numb{
+    font-weight: bold;
+    font-family: Helvetica, sans-serif;
 }
 
 homo{
@@ -64,7 +62,7 @@ homo{
     color: rgb(233, 233, 233);
     padding: 10px;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat;
     font-size: 60px;
     padding: 20px;
 }
@@ -96,7 +94,7 @@ quadro{
     box-shadow:0 0 30px rgb(12, 12, 12);
     margin-top: -200px;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Montserrat;
 }
 
 .blue{
@@ -129,6 +127,7 @@ quadro{
     margin-top: -5px;
     background-color: transparent;
     justify-content: center;
+    font-weight: bold;
 }
 
 h2, h3, h4{
@@ -180,7 +179,7 @@ h3{
     color: grey;
     font-size: 40px;
     margin-top: 40px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Montserrat;
 }
 
 .text_time{
@@ -192,9 +191,9 @@ h3{
 
 .text_color_again{
     display: flex;
-    color: red;
+    color: rgb(185, 6, 6);
     font-size: 40px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Montserrat;
     margin: auto;
 }
 
@@ -234,6 +233,7 @@ footer{
     background-color: white;
     font-size: 30px;
     color: black;
+    font-weight: bold;
 }
 
 .box1, .box3{
