--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
 }
 
 .icon {
-	background-image: url("3.svg");
+    background-image: url("3.svg");
     background-repeat: no-repeat;
     background-color: inherit;
-	width: 200px;
-	height: 200px;
+    width: 200px;
+    height: 200px;
     margin-left: -90px;
 }
 
@@ -51,8 +51,7 @@ logo{
 }
 
 .bold_numb{
-    font-weight: bold;
-    font-family: Helvetica, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 homo{
@@ -149,7 +148,7 @@ h6{
 }
 
 .enter{
-    color: rgb(3, 3, 66);
+    color: rgb(8, 8, 143);
     font-size: 40px;
     margin-top: 40px;
 }
@@ -165,13 +164,13 @@ h6{
     margin-top: -5px;
     margin-bottom: 15px;
     margin: auto;
-    font-size: 60px;
+    font-size: 80px;
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif
 }
 
 h3{
-    background-color: rgb(233, 233, 233);
+    background-color: inherit;
 }
 
 .text_color{
@@ -187,6 +186,7 @@ h3{
     font-size: 50px;
     margin: auto;
     font-family:Arial, Helvetica, sans-serif;
+    margin-bottom: 20px;
 }
 
 .text_color_again{
@@ -206,7 +206,7 @@ footer{
 }
 
 .wra{
-    background-color: white;
+    background-color: inherit;
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -215,7 +215,7 @@ footer{
 
 .box1, .box2, .box3, .box4{
     display: flex;
-    background-color: white;
+    background-color:inherit;
     width: 49%;
     height: 60px;
     justify-content: center;
@@ -223,18 +223,20 @@ footer{
 }
 
 .iin{
-    background-color: white;
+    background-color: inherit;
     display: flex;
     font-size: 30px;
     color: grey; 
+    font-weight: bold;
 }
 
 .numb{
     display: flex;
-    background-color: white;
-    font-size: 30px;
+    background-color:inherit;
+    font-size: 40px;
     color: black;
     font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .box1, .box3{
