--- a/style.css
+++ b/style.css
@@ -126,6 +126,8 @@ quadro{
     background-color: transparent;
     justify-content: center;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 60px;
 }
 
 h2, h3, h4{
@@ -246,4 +248,3 @@ footer{
 .box3, .box4{
     border-bottom: black solid 2px;
 }
-
