--- a/style.css
+++ b/style.css
@@ -125,30 +125,21 @@ quadro{
     display: flex;
     margin: 0;
     margin-top: -5px;
-    background-color: transparent;
+    background-color: inherit;
     justify-content: center;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 60px;
 }
 
-/*h2, h3, h4{
-    display: flex;
-    background-color: transparent;
-    justify-content: center;
-    font-size: 50px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}*/
-
 h5{
     margin-top: 5px;
     margin-left: 10px;
-    background-color: transparent;
+    background-color: inherit;
 }
 
-h6{
-    background-color: transparent;
+h3, h6{
+    background-color: inherit;
 }
 
 .enter{
@@ -178,14 +169,9 @@ h6{
     font-family:Arial, Helvetica, sans-serif
 }
 
-h3{
-    background-color: inherit;
-}
-
 .text_color{
-    display: flex;
+    text-align: center;
     background-color: transparent;
-    justify-content: center;
     color: grey;
     font-size: 40px;
     margin-top: 40px;
@@ -203,7 +189,7 @@ h3{
 }
 
 .text_color_again{
-    display: flex;
+    text-align: center;
     color: rgb(185, 6, 6);
     font-size: 40px;
     font-family: Montserrat;
